--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,24 @@ cmake_minimum_required(VERSION 2.8.9)
 project(volumeDispatcher)
 
 # set the version
-set(VOLUMEDISPATCHER_MAJOR_VERSION 0)
-set(VOLUMEDISPATCHER_MINOR_VERSION 1)
-set(VOLUMEDISPATCHER_PATCH_VERSION 0)
-set(VOLUMEDISPATCHER_VERSION
-  ${VOLUMEDISPATCHER_MAJOR_VERSION}.${VOLUMEDISPATCHER_MINOR_VERSION}.${VOLIMEDISPATCHER_PATCH_VERSION})
+set(DISPATCHER_MAJOR_VERSION 1)
+set(DISPATCHER_MINOR_VERSION 0)
+set(DISPATCHER_PATCH_VERSION 0)
+set(DISPATCHER_VERSION
+  ${DISPATCHER_MAJOR_VERSION}.${DISPATCHER_MINOR_VERSION}.${DISPATCHER_PATCH_VERSION})
 
 # set the out directory. This will put the executables into bin
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
  
 include_directories(include)
 include_directories(conf)
+
+# configure a header file to pass some of the CMake settings
+# to the source code
+configure_file (
+  "${CMAKE_SOURCE_DIR}/conf/DispatcherConfig.h.in"
+  "${CMAKE_SOURCE_DIR}/include/DispatcherConfig.h"
+  )
 
 set(CMAKE_CXX_FLAGS "-Wall -std=c++0x -pthread")
  
