--- a/conf/Config.h.in
+++ b/conf/Config.h.in
@@ -13,3 +13,8 @@
 #define CLIENT_MAJOR_VERSION @CLIENT_MAJOR_VERSION@
 #define CLIENT_MINOR_VERSION @CLIENT_MINOR_VERSION@
 #define CLIENT_PATCH_VERSION @CLIENT_PATCH_VERSION@
+
+#define DISPATCHER_CONF_FILE "@CFG_INSTALL_DIR@/dispatcher.cfg"
+#define MANAGER_CONF_FILE    "@CFG_INSTALL_DIR@/manager.cfg"
+#define SYNC_CONF_FILE       "@CFG_INSTALL_DIR@/sync.cfg"
+#define CLIENT_CONF_FILE     "@CFG_INSTALL_DIR@/client.cfg"
