so many improvements

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -99,7 +99,7 @@ aws_credentials
 # ----------------------------------------------------------------------
 # path to log files
 ManagerLogFile /var/log/diskController/ebsmanager.log
-ControllerLogFile /var/log/diskController/ebscontroller.log
+DispatcherLogPrefix /var/log/volumed/
 ClientLogFile /var/log/diskController/ebsclient.log
 SyncerLogFile /var/log/diskController/ebssyncer.log
 
@@ -109,7 +109,7 @@ Masterloglevel 1
 # you can set log level for each program separetly. comment out if you
 # want all to use the same as the Masterloglevel
 Managerloglevel 3
-Controllerloglevel 3
+DispatcherLoglevel 3
 Clientloglevel 3
 Syncerloglevel 3
 
