changes: (1) checking if target filesystem and spare volumes are mounted when program start. (2) added new variable to the system called TargetFilesystemDevice

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -43,6 +43,7 @@ MaxIdleDisk 1
 # server that have DEVOS installed. 
 TargetFilesystem vol-0bf49fd92db15ea00
 TargetFilesystemMountPoint /mnt/targetFilesystem
+TargetFilesystemDevice /dev/xvdb
 
 # Here, specify the directory that is going ot be used to mount all of 
 # volumes that are created by the DEVOS program.
