--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,23 +13,17 @@ set(DISPATCHER_PATCH_VERSION 0)
 set(DISPATCHER_VERSION
   ${DISPATCHER_MAJOR_VERSION}.${DISPATCHER_MINOR_VERSION}.${DISPATCHER_PATCH_VERSION})
 
-#set(MANAGER_MAJOR_VERSION 1)
-#set(MANAGER_MINOR_VERSION 0)
-#set(MANAGER_PATCH_VERSION 0)
-#set(MANAGER_VERSION
-#  ${MANAGER_MAJOR_VERSION}.${MANAGER_MINOR_VERSION}.${MANAGER_PATCH_VERSION})
-
 #set(SYNC_MAJOR_VERSION 1)
 #set(SYNC_MINOR_VERSION 0)
 #set(SYNC_PATCH_VERSION 0)
 #set(SYNC_VERSION
 #  ${SYNC_MAJOR_VERSION}.${SYNC_MINOR_VERSION}.${SYNC_PATCH_VERSION})
 
-#set(CLIENT_MAJOR_VERSION 1)
-#set(CLIENT_MINOR_VERSION 0)
-#set(CLIENT_PATCH_VERSION 0)
-#set(CLIENT_VERSION
-#  ${CLIENT_MAJOR_VERSION}.${CLIENT_MINOR_VERSION}.${CLIENT_PATCH_VERSION})
+set(CLIENT_MAJOR_VERSION 1)
+set(CLIENT_MINOR_VERSION 0)
+set(CLIENT_PATCH_VERSION 0)
+set(CLIENT_VERSION
+  ${CLIENT_MAJOR_VERSION}.${CLIENT_MINOR_VERSION}.${CLIENT_PATCH_VERSION})
 
 
 
@@ -49,21 +43,21 @@ configure_file (
 #set(CMAKE_CXX_FLAGS "-Wall -std=c++0x -pthread")
 set(CMAKE_CXX_FLAGS "-std=c++0x -pthread")
  
-set(DISPATCHER src/dispatcher.cpp src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ServerSocket.cpp src/Socket.cpp src/Snapshots.cpp src/Sync.cpp)
-#set(SYNC       src/sync.cpp       src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ServerSocket.cpp src/Socket.cpp)
-#set(CLIENT     src/client.cpp     src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ClientSocket.cpp src/Socket.cpp)
+set(VOLUMESD    src/volumesd.cpp         src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ServerSocket.cpp src/Socket.cpp src/Snapshots.cpp src/Sync.cpp)
+#set(SYNC       src/sync.cpp             src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ServerSocket.cpp src/Socket.cpp)
+set(VCLIENT     src/volumesd-client.cpp  src/Utils.cpp src/Logger.cpp src/Volumes.cpp src/ClientSocket.cpp src/Socket.cpp src/Sync.cpp) 
 
 # create the executables
-add_executable(dispatcher ${DISPATCHER})
-#add_executable(sync       ${SYNC})
-#add_executable(client     ${CLIENT})
+add_executable(volumesd             ${VOLUMESD})
+#add_executable(sync                ${SYNC})
+add_executable(volumesd-client     ${VCLIENT})
 
 # installations
 #set(EXE_INSTALLATION_DIR ${CMAKE_BINARY_DIR}/install)
-install(TARGETS dispatcher              DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
-#install(TARGETS sync                    DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
-#install(TARGETS client                  DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
-install(FILES   conf/dispatcher.cfg     DESTINATION ${CFG_INSTALL_DIR} COMPONENT config  )
+install(TARGETS volumesd             DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
+#install(TARGETS sync                DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
+install(TARGETS volumesd-client      DESTINATION ${EXE_INSTALL_DIR} COMPONENT binaries)
+install(FILES   conf/dispatcher.cfg  DESTINATION ${CFG_INSTALL_DIR} COMPONENT config  )
 
 message("--------------------------------------------------")
 message("Binaries will be placed in ${EXE_INSTALL_DIR}")
