Changes: 1) moving snapshot and volumes manager from thread for each to the main program. 2) Implementing graceful shutdown(partially implemented). 3) Intergrating Sync program with volusd (still inprogress)

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -4,10 +4,6 @@
 # This varabile must be set automatically.
 Hostname infra1
 
-
-# ----------------------------------------------------------------------
-# EBSController
-# ----------------------------------------------------------------------
 # This port is used by ebscontroller to listen to incoming requests from 
 # ebsclient program
 ServerPort 90000
@@ -23,10 +19,6 @@ EnableManagement true
 # nagmenet commands
 ManagementPort 80000
 
-
-# ----------------------------------------------------------------------
-#  EBSManager
-# ----------------------------------------------------------------------
 # in minutes
 SnapshotFrequency 60 
 
@@ -57,36 +49,18 @@ VolumeFilePath /tmp/diskFile.info
 DestinationMountPoint /home/cde
 
 # ----------------------------------------------------------------------
-# EBSSyncer
+# Logs 
 # ----------------------------------------------------------------------
-# specifuy the path to the push command
-LocalRsyncCommand bin/local-push.sh
-RemoteRsyncCommand bin/remote-push.sh
-_max_wait_time 60
+# path to log files
+DispatcherLogPrefix /var/log/volumed/
+ClientLogFile /var/log/diskController/ebsclient.log
 
-SyncerServicePort 7000
-# in minutes
-SyncFrequency 60
+# you can set log level for each program separetly. comment out if you
+# want all to use the same as the Masterloglevel
+# note: fix this to use camel naeming conevetion
+DispatcherLoglevel 3
+#Clientloglevel 3
 
-# file that is used to store the date of the latests master sync. Master
-# sync is when all of the volumes in the volume pool are synced against
-# the TargetFilesystem to ensure that all of the volumes are identical
-SyncDatesFile /home/cde/saad/code/DiskManager/files/syncDates.info
-
-# if a sync error happens, shoudl it send an email. default behaivour is 
-# to log it in the log file
-EmailSynError yes
-SynErrorEmailTo dev@linkrd.com
-
-# syncing output is reported to the log file by default, the following 
-# to send and email as well
-EmailSynOutput no 
-SynOutputEmailTo dev@linkrd.com
-
-# the following three directives did not solve the issue, remove
-EmailPushOutput no
-EmailPushError yes
-EmailPushEmail dev@linkrd.com
 
 # ----------------------------------------------------------------------
 # AWS command 
@@ -96,23 +70,6 @@ aws_region 		us-east-1
 aws_config		
 aws_credentials	
 
-# ----------------------------------------------------------------------
-# Logs 
-# ----------------------------------------------------------------------
-# path to log files
-ManagerLogFile /var/log/diskController/ebsmanager.log
-DispatcherLogPrefix /var/log/volumed/
-ClientLogFile /var/log/diskController/ebsclient.log
-SyncerLogFile /var/log/diskController/ebssyncer.log
 
-# log level (error, info, debug)
-Masterloglevel 1
-
-# you can set log level for each program separetly. comment out if you
-# want all to use the same as the Masterloglevel
-Managerloglevel 3
-DispatcherLoglevel 3
-Clientloglevel 3
-Syncerloglevel 3
 
 
