--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -19,14 +19,19 @@ EnableManagement true
 # nagmenet commands
 ManagementPort 80000
 
-# in minutes
+# ------------------------------
+# SNAPSHOTS
+# ------------------------------
+# how oftern does the volsd create a snapshot of the target file system (in minutes)
 SnapshotFrequency 60 
 
-# the file the EBSMaanager uses to store inforamtion about snapshots
+# where to store the file, locally or in s3
+SnapshotFileStorage local
+# this file will be used to store snapshots data
 SnapshotFile /tmp/snapshot.info
-
 # number of snapshot to maintain
 SnapshotMaxNumber 2
+
 
 # Number of idle volumes that must be maintained
 MaxIdleDisk 2
