continue integerating the sync with volsd

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -51,7 +51,32 @@ VolumeFilePath /tmp/diskFile.info
 
 # this is where the volumes will be mounted in the remote servers 
 # not needed.
-DestinationMountPoint /home/cde
+# DestinationMountPoint /home/cde
+
+# ------------------------------
+# Sync
+# ------------------------------
+
+# If this value is not specified, then the default 60 min
+# In minutes
+SyncVolumesInterval 60
+
+# If SyncVolumes set to no, then the sync program will not sync volumes priodically.
+# If this value is not specified, then the default is yes
+SyncVolumes yes
+
+# Am I gonna us this?
+# SyncerServicePort 7000
+
+# specify the path to the push command
+LocalRsyncCommand bin/local-push.sh
+RemoteRsyncCommand bin/remote-push.sh
+
+
+# file that is used to store the date of the latests master sync. Master
+# sync is when all of the volumes in the volume pool are synced against
+# the TargetFilesystem to ensure that all of the volumes are identical
+SyncDatesFile /tmp/syncDates.info
 
 # ----------------------------------------------------------------------
 # Logs 
@@ -59,11 +84,13 @@ DestinationMountPoint /home/cde
 # path to log files
 DispatcherLogPrefix /var/log/volumed/
 ClientLogFile /var/log/diskController/ebsclient.log
+SyncLogPrefix /var/log/volumed/
 
 # you can set log level for each program separetly. comment out if you
 # want all to use the same as the Masterloglevel
 # note: fix this to use camel naeming conevetion
 DispatcherLoglevel 3
+# SyncLogLevel 3
 #Clientloglevel 3
 
 
@@ -74,6 +101,32 @@ aws_cmd 		/usr/local/bin/aws
 aws_region 		us-east-1
 aws_config		
 aws_credentials	
+
+
+
+
+
+# ----------------------------------------------------------------------
+# Logs 
+# ----------------------------------------------------------------------
+
+
+# if a sync error happens, shoudl it send an email. default behaivour is 
+# to log it in the log file
+EmailSyncError yes
+SyncErrorEmailTo dev@linkrd.com
+
+# syncing output is reported to the log file by default, the following 
+# to send and email as well
+EmailSyncOutput no 
+SyncOutputEmailTo dev@linkrd.com
+
+# the following three directives did not solve the issue, remove
+EmailPushOutput no
+EmailPushError yes
+EmailPushEmail dev@linkrd.com
+
+
 
 
 
