adding an option to set the remote mount point via conf file

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -53,6 +53,8 @@ VolumeFilePath /tmp/diskFile.info
 # not needed.
 # DestinationMountPoint /home/cde
 
+# Remote MountPoint: this is where the volsd program is going to mount the file system on remote servers
+RemoteMountPoint /home/cde
 # ------------------------------
 # Sync
 # ------------------------------
