changed the default log directory

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -55,6 +55,7 @@ VolumeFilePath /tmp/diskFile.info
 
 # Remote MountPoint: this is where the volsd program is going to mount the file system on remote servers
 RemoteMountPoint /home/cde
+
 # ------------------------------
 # Sync
 # ------------------------------
@@ -84,9 +85,8 @@ SyncDatesFile /tmp/syncDates.info
 # Logs 
 # ----------------------------------------------------------------------
 # path to log files
-DispatcherLogPrefix /var/log/volumed/
-ClientLogFile /var/log/diskController/ebsclient.log
-SyncLogPrefix /var/log/volumed/
+DispatcherLogPrefix /var/log/volsd/
+SyncLogPrefix /var/log/volsd/
 
 # you can set log level for each program separetly. comment out if you
 # want all to use the same as the Masterloglevel
