added a note that is must be done

--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -43,7 +43,8 @@ TargetFilesystemMountPoint /mnt/targetFilesystem
 TargetFilesystemDevice /dev/xvdb
 
 # Here, specify the directory that is going ot be used to mount all of 
-# volumes that are created by the DEVOS program.
+# volumes that are created by the volsd program.
+# TODO: when this var changed, the system will attemp to create new disks rather than remoting in different location
 TempMountPoint /mnt/volumed/
 
 # The file is used to store all of the information about create volumes
