--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -20,18 +20,19 @@ EnableManagement true
 ManagementPort 80000
 
 # ------------------------------
-# SNAPSHOTS
+# SNAPSHOTS AND EBS VOLUMES
 # ------------------------------
 # how oftern does the volsd create a snapshot of the target file system (in minutes)
 SnapshotFrequency 60 
 
 # where to store the file, locally or in s3
 SnapshotFileStorage local
+
 # this file will be used to store snapshots data
 SnapshotFile /tmp/snapshot.info
+
 # number of snapshot to maintain
 SnapshotMaxNumber 2
-
 
 # Number of idle volumes that must be maintained
 MaxIdleDisk 2
@@ -76,7 +77,6 @@ SyncVolumes yes
 LocalRsyncCommand bin/local-push.sh
 RemoteRsyncCommand bin/remote-push.sh
 
-
 # file that is used to store the date of the latests master sync. Master
 # sync is when all of the volumes in the volume pool are synced against
 # the TargetFilesystem to ensure that all of the volumes are identical
@@ -96,24 +96,6 @@ DispatcherLoglevel 3
 # SyncLogLevel 3
 #Clientloglevel 3
 
-
-# ----------------------------------------------------------------------
-# AWS command 
-# ----------------------------------------------------------------------
-aws_cmd 		/usr/local/bin/aws
-aws_region 		us-east-1
-aws_config		
-aws_credentials	
-
-
-
-
-
-# ----------------------------------------------------------------------
-# Logs 
-# ----------------------------------------------------------------------
-
-
 # if a sync error happens, shoudl it send an email. default behaivour is 
 # to log it in the log file
 EmailSyncError yes
@@ -129,8 +111,10 @@ EmailPushOutput no
 EmailPushError yes
 EmailPushEmail dev@linkrd.com
 
-
-
-
-
-
+# ----------------------------------------------------------------------
+# AWS command 
+# ----------------------------------------------------------------------
+aws_cmd 		
+aws_region 	
+aws_config		
+aws_credentials	
