--- a/conf/dispatcher.cfg
+++ b/conf/dispatcher.cfg
@@ -118,3 +118,8 @@ aws_cmd
 aws_region 	
 aws_config		
 aws_credentials	
+
+# ----------------------------------------------------------------------
+# NFS Mount 
+# ----------------------------------------------------------------------
+NFSMountFlags MS_NODIRATIME, MS_NOATIME
