fixed the issuse of not adding to mtab. Note, the proram still doe not work since I added a test statement in volumes-client.cpp

--- a/conf/volsd-client.conf
+++ b/conf/volsd-client.conf
@@ -31,6 +31,10 @@ TargetFSMountPoint /home/cde
 # This is where the program will attach the volume to.
 TargetFSDevice /dev/xvdb
 
+#
+TargetFSType ext4
+
+
 # ForceMount: if set to yes, the program will remove the contents of the 
 # mount point before attempting to mount the volume
 # Default: No
